# RPG_teacher

./: .gitignore  .requirements.txt.swp  .~lock.submission.odt#  .~lock.tutorial script.docx#  README.md  custom_nvidia_llm.py  huggingface_api_key.txt  llamaindex-requirements.txt  llamaindex_basic_RAG.ipynb  load_pinecone.ipynb  metadat_wrangle.ipynb  nemo_curator_tutorial.py  nvidia-requirements.txt  openai_api_key_2.txt  pyproject.toml  requirements.txt  requirements_curator.txt  rpg_streamlit.py  submission.odt  tutorial script.docx
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  load_pinecone-checkpoint.ipynb  metadat_wrangle-checkpoint.ipynb  nemo_curator_tutorial-checkpoint.py
archive/: Untitled.ipynb  Untitled1.ipynb  llamaindex_basic_RAG.ipynb  metadat_wrangle.ipynb  nvidia-llama3.1-405b-instruct_api_key.txt
archive/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
config/: config.yaml  prompts.yaml
data/: .~lock.chapter_summary_notes.csv#  chapter_summary_notes.csv
data/combined/: chapter_12_combined.txt  chapter_13_combined.txt  chapter_7_combined.txt
data/novels/Harry Potter/: Harry Potter.pdf_page_100_9997ba211afbe22fa57219efc3d21179.jsonl  Harry Potter.pdf_page_102_95e030ce19aad3700fd2de056a040569.jsonl  Harry Potter.pdf_page_104_eed331cc54c735ffbbb1e6035f7e7a72.jsonl  Harry Potter.pdf_page_105_3dd4eb43a2e5f4a307865fb30d713b8a.jsonl  Harry Potter.pdf_page_109_3a727057237b74f3e6935ea93e860cd2.jsonl  Harry Potter.pdf_page_10_abd5732238dd46228ac62ad40faec016.jsonl  (+120 more)
(+1817 files in other folders)
