[tool.poetry]
name = "rpg_teacher"
version = "0.1.0"
description = ""
authors = ["Vincent Pisano <vincent.pisano1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
pandas = "^2.2.3"
llama-index-llms-nvidia = "^0.2.6"
llama-index-core = "^0.11.22"
tenacity = "^9.0.0"
openai = "^1.54.1"
pinecone = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
